Check probability notebook

--- a/probabilité/probabilité.ipynb
+++ b/probabilité/probabilité.ipynb
@@ -1097,7 +1097,7 @@
    "source": [
     "## L'intervalle de densité maximale\n",
     "\n",
-    "En statistiques bayésiennes, on utilise souvent les distribution de probabilité pour calculer l'intervalle de densité maximale ou *highest density interval (HDI)* pour résumer l'intervalle de valeurs les plus crédibles. Nous verrons plus en detail ce concept dans le chapitre dédié à la distribution a posteriori. Pour le moment, nous pouvons déjà voir que cela correspond à l'intervalle de valeurs de la variable continue pour leuqel l'aire sous la courbe de la distribution de probabilité correspond à 0.95.\n",
+    "En statistiques bayésiennes, on utilise souvent les distribution de probabilité pour calculer l'intervalle de densité maximale, aussi appelé intervalle de crédibilité ou *highest density interval (HDI)*, pour résumer l'intervalle de valeurs les plus crédibles. Nous verrons plus en detail ce concept dans le chapitre dédié à la distribution a posteriori. Pour le moment, nous pouvons déjà voir que cela correspond à l'intervalle de valeurs de la variable continue pour leuqel l'aire sous la courbe de la distribution de probabilité correspond à 0.95.\n",
     "\n",
     "Il est important de noter que l’intervalle de densité maximale (HDI) n'est pas limité aux distributions symétriques comme la loi normale. Il peut également être calculé pour des distributions asymétriques, comme les lois gamma ou beta, qui sont couramment rencontrées en statistique bayésienne. Dans ces cas, le HDI s’ajuste à la forme réelle de la distribution : l’intervalle reste centré sur les valeurs les plus probables, mais il peut être décalé et avoir des longueurs différentes de part et d’autre du mode. Cela en fait un outil particulièrement adapté pour résumer l’incertitude, même lorsque la distribution a posteriori est fortement asymétrique."
    ]
@@ -1174,7 +1174,7 @@
     "\n",
     "Tout comme pour une variable aléatoire discrète, la fonction de répartition cumulative (*cumulative distribution function* ou CDF) d'une variable aléatoire continue donne la probabilité que la variable ait une valeur inférieure ou égale à $x$. En d'autres termes, elle représente l'aire sous la courbe de la densité de probabilité de la variable aléatoire jusqu'à une certaine valeur $x$. La CDF est donc croissante et varie de 0 à 1 à mesure que $x$ augmente.\n",
     "\n",
-    "Un point clé dans l'étude de la CDF est le point d'inflexion, qui correspond à la valeur de $x$ pour laquelle la courbe de la CDF change de concavité, c'est-à-dire où la pente de la courbe passe de croissante à décroissante (ou inversement). Ce point peut fournir des informations importantes sur la distribution, et correspond au pic dans la distribution PDF utilisée ci-dessus. Vous pouvez observer que, dans notre exemple, le point d'inflexion dans la CDF correspond à 160 cm."
+    "Un point clé dans l'étude de la CDF est le point d'inflexion, qui correspond à la valeur de $x$ pour laquelle la courbe de la CDF change de concavité, c'est-à-dire où la pente de la courbe PDF passe de croissante à décroissante (ou inversement). Ce point peut fournir des informations importantes sur la distribution, et correspond au pic dans la distribution PDF utilisée ci-dessus. Vous pouvez voir que, dans notre exemple, le point d'inflexion dans la CDF correspond à 160 cm."
    ]
   },
   {
