added more text on mcmc

--- a/mcmc/mcmc.ipynb
+++ b/mcmc/mcmc.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0155bd4c-92e6-4492-b207-12d73d547cd7",
+   "metadata": {},
+   "source": [
+    "[ADD TEXT HERE EXPLANING THE NEED OF MULTIPLE INTEGRAL TO GO FROM A DISTRIBUTION THAT IS NOT A VALID PROBABILIY DENSITY TO A DISTRIBUTION THAT IS, THE NORMALIZE THE DENONIMATOR BY DIVIDING IT BY THE VALUE OF ITS SUM OR INTEGRAL]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a56bc93-58d0-405f-a9a0-80bea3a20ee9",
    "metadata": {},
    "source": [
@@ -323,19 +331,24 @@
    "source": [
     "## L'approximation de la distribution à posteriori par MCMC\n",
     "\n",
-    "Obtenir la constante de normalisation par le calcule de l'intégrale n'est pas toujour possible, en particulier cela est compliqué (voir impossible) dans le cas des intégrales multiples. Cela a historiquement representé l'obstacle majeur dans l'implémentation des méthodes Baysien, effectivement même dans le cas d'un régression linaire simple (ce qui represente un des modèles les plus simples que\n",
+    "Obtenir la constante de normalisation par le calcule de l'intégrale n'est pas toujour possible, en particulier cela est compliqué (voir impossible) dans le cas des intégrales multiples. Cela a historiquement representé l'obstacle majeur dans l'implémentation des méthodes Baysien, effectivement même dans le cas d'un régression linaire simple (ce qui represente un des modèles les plus simples utilisée en psychologie expérimentale), nous avons déjà 3 paramètres à estimer ($\\beta_0$,$\\beta_1$, $\\sigma$), ce qui nécessite déjà d'un calcule d'intégrale multidimentionnelle.\n",
+    "\n",
+    "Le boost à l'application des statistiques baysienne est arrivé grace au developpement des dits **Markov Chains Monte Carlo**, abbreviée comme MCMC.\n",
+    "\n",
+    "L'idée clée des méthode *Monte Carlo*, c'est d'utiliser le hasard pour reussir à ressoudre des problèmes complexes qui ne peuvent pas être calculés. Pour comprendre cette idée vous pouvez imaginer l'example suivant: après une forte pluie votre jardin est couvert par des grandes flaques de bouts. Pour écrire à votre assurance, vous voulez quantifier la proportion de votre jardin qui coverte par le bout, mais cela est très compliqué à calculer. On peut alors procèder à une éstimation de la manière suivante: On jette $1000$ petits cailloux partout dans le jardin et on compte combien de cailloux tombent dans le bout. Si par example $750$ cailloux sont à l'ombre, vous pouvez en conclure que environs  $75%$ du jardin est couver par du bout. Cela c'est l'idée au cours des méthod Monte Carlo: utiliser des tirages aléatoires pour estimer une quantité difficile à calculer autrement. \n",
+    "\n",
+    "La méthode de Monte Carlo a été développée pendant la Seconde Guerre mondiale, dans le cadre du projet Manhattan (dans le laboratoire Los Alamos) qui visait à construire la première bombe atomique. L’idée vient du physicien Stanislaw Ulam qui l’aide de John von Neumann ont imaginé une méthode consistant à faire de nombreux tirages aléatoires pour simuler des phénomènes physiques comme la diffusion des neutrons. Le nom \"Monte Carlo\" vient du célèbre casino de Monaco. Après la guerre, les chercheurs de Los Alamos ont continué à s’intéresser aux systèmes physiques complexe et le dévelopement des méthodes MCMC prend un détour important en 1953 avec la publication d’un article écrit par Nicholas Metropolis, **Arianna Rosenbluth**, Marshall Rosenbluth, Augusta Teller et Edward Teller. Cet article présente ce qu’on appelle aujourd’hui l’algorithme de Metropolis, une version de la méthode de Monte Carlo qui utilise de chaines de Markov à la place que des tirages complétament aléatoires. Cet algorithme est devenu la base du MCMC (Monte Carlo par Chaînes de Markov), la méthode que on utilise aujourd’hui dans les statistiques bayésiennes pour l'approximation de la distribution à posteriori.\n",
+    "\n",
+    "Bien que l’algorithme porte le nom de Metropolis, c’est en réalité Arianna Rosenbluth qui a écrit le code informatique et réalisé les premières simulations. Elle a joué un rôle central dans la mise en œuvre pratique de l’algorithme, en programmant les calculs sur les premiers ordinateurs de Los Alamos, à une époque où la programmation demandait une grande rigueur et une expertise technique exceptionnelle.\n",
     "\n",
     "\n",
+    "Les MCMC permettend d'approximer la distribution à posteriori sans devoir passer par l'intégration numérique. Ces méthodes utilisent des méthodes stochatisques (i.e., marche alétoire) pour une serie de valeur de paramètres, plus de paramètres on généres, plus la distribution de ces paramètres converges vers une distribution d'equilibre, cette distribution d'equilibre correspond à la distribution à posteriori que on cherche à estimer.\n",
     "\n",
-    "[ADD TEXT HERE EXPLANING THE NEED OF MULTIPLE INTEGRAL TO GO FROM A DISTRIBUTION THAT IS NOT A VALID PROBABILIY DENSITY TO A DISTRIBUTION THAT IS, THE NORMALIZE THE DENONIMATOR BY DIVIDING IT BY THE VALUE OF ITS SUM OR INTEGRAL]\n",
-    "\n",
-    "\n",
-    "Dans les MCMC on utilise  marche alétoire (*random walk*) our explorer l'espace des paramètres (par exemple, les valeurs possibles de $\\theta$). Une marche aléatoire est un processus stochastique (c’est-à-dire basé sur le hasard) dans lequel on se déplace pas à pas, à chaque étape en choisissant une nouvelle position au hasard, autour de la position précédente. \n",
+    "Pour générer ces valeurs, dans les MCMC on utilise marche alétoire (*random walk*) our explorer l'espace des paramètres (par exemple, les valeurs possibles de $\\theta$). Une marche aléatoire est un processus stochastique (c’est-à-dire basé sur le hasard) dans lequel on se déplace pas à pas, à chaque étape en choisissant une nouvelle position au hasard, autour de la position précédente. \n",
     "\n",
     "Cette marche alétoire est dit *Markovienne*, parce que chaque pas au moment ($t$) dépend du pas prédedant ($t-1$) et **non pas des autres pas fait dans le passé** (e.g., $t-2$, $t-3$, $t-4$, etc).\n",
     "\n",
     "On utilise le terme *Chaine* qui souligne aussi que chaque pas (i.e., chaque valeur générée par l'algorithm) dépend du pas précédant: les valeurs générées sont liées les unes aux autres, formant une suite ordonnée d'états où chaque état dépend du précédent.\n",
-    "\n",
     "\n",
     "\n",
     "Dans l'algorithm de Metropolis nous pouvons distinguer 4 étapes:\n",
