added note on data

--- a/mcmc/mcmc.ipynb
+++ b/mcmc/mcmc.ipynb
@@ -326,7 +326,7 @@
    "source": [
     "## L'approximation de la distribution à posteriori par MCMC\n",
     "\n",
-    "Obtenir la constante de normalisation par le calcule de l'intégrale n'est pas toujour possible, en particulier cela est compliqué (voir impossible) dans le cas des intégrales multiples. Cela a historiquement representé l'obstacle majeur dans l'implémentation des méthodes Baysien, effectivement même dans le cas d'un régression linaire simple (ce qui represente un des modèles les plus simples utilisée en psychologie expérimentale), nous avons déjà 3 paramètres à estimer ($\\beta_0$,$\\beta_1$, $\\sigma$), ce qui nécessite déjà d'un calcule d'intégrale multidimentionnelle.\n",
+    "Obtenir la constante de normalisation par le calcule de l'intégrale n'est pas toujour possible, en particulier cela est compliqué (voir impossible) dans le cas des intégrales multiples. Cela a historiquement representé l'obstacle majeur dans l'implémentation des méthodes Bayesienne, effectivement même dans le cas d'un régression linaire simple (ce qui represente un des modèles les plus simples utilisée en psychologie expérimentale), nous avons déjà 3 paramètres à estimer ($\\beta_0$,$\\beta_1$, $\\sigma$), ce qui nécessite déjà d'un calcule d'intégrale multidimentionnelle.\n",
     "\n",
     "Le boost à l'application des statistiques baysienne est arrivé grace au developpement des dits **Markov Chains Monte Carlo**, abbreviée comme MCMC.\n",
     "\n",
@@ -350,7 +350,7 @@
     "\n",
     "- **1) Définition l'état de départ:**  Nous allons toujours partir d'une valeur possible du paramètre dont on cherche d'estimer la distribution a posteriori. Cela est est typiquement définit comme le point de départ de la chaine de Markov ou la valeur initale.\n",
     "  \n",
-    "- **2) Définir le prochain état possible:** Nous proposon de nous éloigner de la valeur actuelle du paramètre (*valeur actuelle*) vers oune nouvelle valeur du paramètre. Nous ajoutons à cette valeur actuelle une valeur aléatoire provenant, disons, d'une distribution normale avec une certaine variance. Nous appelons cela l'emplacement candidat (*valeur candidat*). \n",
+    "- **2) Définir le prochain état possible:** Nous proposons de nous éloigner de la valeur actuelle du paramètre (*valeur actuelle*) vers oune nouvelle valeur du paramètre. Nous ajoutons à cette valeur actuelle une valeur aléatoire provenant, disons, d'une distribution normale avec une certaine variance. Nous appelons cela l'emplacement candidat (*valeur candidat*). \n",
     "\n",
     "- **3) Calculer le ratio entre le postriori de valeur currente et la valeur candidat:** Nous allons caluler le ratio dans la manière suivante: $$R = \\frac{\\text{posterior(valeur candidat)}}{\\text{posterior(valeur actuelle)}}$$ Cette étape est celle qui est particulièrement utile dans le calcule de la distribution à posteriori parce que la probabilité des données ($P(D)$) apparait de manière identitique au numérateur et dénumerateur du calcule du ratio $R$ et donc s'annulle. Le calcule du ratio $R$ dans le MCMC ce fait donc sans passer par le calcule d'une intégrale. Plus la valeur de $R$ est grande plus la valeur candidate a une plus grande vraisemblance par rapport à la valeur currante.\n",
     "\n",
@@ -793,7 +793,7 @@
    "id": "e00be8c8-a769-4358-b3fc-602f9544065b",
    "metadata": {},
    "source": [
-    "Et nous pouvons calculer la valeur median et l'intervalle HDI de cette distribution à posteriori approximé par metropolis"
+    "Et nous pouvons calculer la valeur median et l'intervalle HDI de cette distribution à posteriori approximé par mcmc"
    ]
   },
   {
@@ -862,9 +862,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3c6c294-2b91-46ab-a3ed-ca3bda8a06ad",
+   "metadata": {},
+   "source": [
+    "## Notes sur Metropolis:\n",
+    "\n",
+    "La performance de l’algorithme de Metropolis pour estimer la distribution postérieure dépend fortement des données utilisées. En effet, ce sont les données qui influencent la stabilité de l’estimation de la vraisemblance, un élément clé dans le calcul du rapport d’acceptation. Ce rapport compare la vraisemblance et la densité a priori entre deux propositions successives, et c’est ce mécanisme qui guide la construction de la chaîne de Markov. Si les données conduisent à une estimation instable de la vraisemblance — par exemple en raison d’un faible signal ou d’une grande incertitude — alors le ratio devient bruité, ce qui nuit à la qualité de l’échantillonnage. À l’inverse, des données informatives permettent une estimation plus précise de la vraisemblance, stabilisent le ratio et améliorent la convergence de la chaîne vers la distribution cible. Vous pouvez tester cet effet en changant les données: essayé de voir ce qui se passe aux chaines (p.ex nombre de steps nécessaires) avec des échantillons des données plus grandes comme par example $n = 100$ et $k = 30$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeaef7e7-868c-4af7-8529-74f3e364dada",
+   "id": "7db7f7fc-80c0-4203-8427-d4e7768e2ab4",
    "metadata": {},
    "outputs": [],
    "source": []
