--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -318,7 +318,7 @@
     "\n",
     "Le modèle de régression linéaire s'écrit comme suit :\n",
     "\n",
-    "$$\\hat{y} = \\beta_0 + \\beta_1 x + \\epsilon, \\epsilon \\sim Normal(0, \\sigma)$$\n",
+    "$$\\hat{y} = \\beta_0 + \\beta_1 x + \\epsilon, \\epsilon \\sim Normal(0, \\sigma^2)$$\n",
     "\n",
     "où :\n",
     "\n",
